--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,6 @@
 {
   "version": 2,
   "builds": [
-    { "src": "api/webhook.js", "use": "@vercel/node" },
-    { "src": "api/webhook-representante.js", "use": "@vercel/node" }
+    { "src": "api/*.js", "use": "@vercel/node" }
   ]
 }
